--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -38,6 +38,7 @@ jobs:
         env:
           RN: ${{ matrix.release-notes }}
           MESSAGE: ${{ matrix.release-notes }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           GH_DISCUSSION_TOKEN: ${{ secrets.GH_DISCUSSION_TOKEN }}
         run: |
