--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -43,4 +43,10 @@ jobs:
           GH_DISCUSSION_TOKEN: ${{ secrets.GH_DISCUSSION_TOKEN }}
         run: |
           # notify-discord ${{ matrix.name }} v${{ matrix.version }}
-          notify-gh-discussion ${{ matrix.name }} v${{ matrix.version }}
+          # notify-gh-discussion ${{ matrix.name }} v${{ matrix.version }}
+      - name: Notify ${{ matrix.name }} on Bluesky
+        env:
+          BLUESKY_APP_PWD: ${{ secrets.BLUESKY_APP_PWD }}
+          BLUESKY_APP_IDENTIFIER: ${{ secrets.BLUESKY_APP_IDENTIFIER }}
+        run: |
+          notify-bluesky ${{ matrix.name }} v${{ matrix.version }}
