--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -293,3 +293,9 @@ jobs:
           GH_DISCUSSION_TOKEN: ${{ secrets.GH_DISCUSSION_TOKEN }}
         run: |
           notify-gh-discussion ${{ matrix.name }} v${{ matrix.version }}
+      - name: Notify ${{ matrix.name }} on Bluesky
+        env:
+          BLUESKY_APP_PWD: ${{ secrets.BLUESKY_APP_PWD }}
+          BLUESKY_APP_IDENTIFIER: ${{ secrets.BLUESKY_APP_IDENTIFIER }}
+        run: |
+          notify-bluesky ${{ matrix.name }} v${{ matrix.version }}
