--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -285,3 +285,25 @@ jobs:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
         run: |
           notify-discord ${{ matrix.name }} v${{ matrix.version }}
+      - name: Notify ${{ matrix.name }} on Github Discussion
+        env:
+          RN: ${{ matrix.release-notes }}
+          MESSAGE: ${{ matrix.release-notes }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
+          GH_DISCUSSION_TOKEN: ${{ secrets.GH_DISCUSSION_TOKEN }}
+        run: |
+          notify-gh-discussion ${{ matrix.name }} v${{ matrix.version }}
+      - name: Notify ${{ matrix.name }} on Bluesky
+        env:
+          BLUESKY_APP_PWD: ${{ secrets.BLUESKY_APP_PWD }}
+          BLUESKY_APP_IDENTIFIER: ${{ secrets.BLUESKY_APP_IDENTIFIER }}
+        run: |
+          notify-bluesky ${{ matrix.name }} v${{ matrix.version }}
+      - name: Notify ${{ matrix.name }} on Twitter
+        env:
+          X_API_KEY: ${{ secrets.X_API_KEY }}
+          X_API_SECRET: ${{ secrets.X_API_SECRET }}
+          X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
+          X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
+        run: |
+          notify-twitter ${{ matrix.name }} ${{ matrix.version }}
