Revert "chore: release main (#524)"
This reverts commit 373f26dc37e4c3b6c47a460d109de34de90bfa23.

--- a/apps/ttkode/pyproject.toml
+++ b/apps/ttkode/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
     "Topic :: Software Development :: User Interfaces",
 ]
 dependencies = [
-    'pyTermTk>=0.48.1-a0',
+    'pyTermTk>=0.47.2-a.0',
     'appdirs',
     'copykitten',
     'pygments'
