--- a/apps/dumbPaintTool/pyproject.toml
+++ b/apps/dumbPaintTool/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    'pyTermTk>=0.48.1-a0',
+    'pyTermTk>=0.48.0-a.0',
     'pyperclip',
     'Pillow',
 ]
