--- a/apps/ttkDesigner/pyproject.toml
+++ b/apps/ttkDesigner/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Application Frameworks",
 ]
 dependencies = [
-    'pyTermTk>=0.48.1-a0',
+    'pyTermTk>=0.48.0-a.0',
     'pyperclip',
     'Pillow',
 ]
