--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -57,8 +57,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+1       python -m pip install -e 'libs/pyTermTk[test]'
 
     - name: Lint with flake8
       run: |
