--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -55,9 +55,10 @@ jobs:
         tools/check.import.sh
 
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
-1       python -m pip install -e 'libs/pyTermTk[test]'
+        python -m pip install -e 'libs/pyTermTk[test]'
 
     - name: Lint with flake8
       run: |
