--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -61,7 +61,7 @@ jobs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e 'libs/pyTermTk[test]'
+        python -m pip install -e '.[test]'
 
     - name: Lint with flake8
       run: |
