--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@
 
 [project.optional-dependencies]
     test = [
+        "pyTermTk[test]",
+        "ttkode[test]",
         "pytest>=8.3.4",
         "flake8>=7.2.0",
         "mypy>=1.15.0"
